[package]
name = "consensus-go-client"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra consensus go client"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"
