[package]
name = "schemadb"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra schemadb"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
once_cell = "1.3.1"
libra-metrics = { path = "../../common/metrics", version = "0.1.0" }
rocksdb = {git = "https://github.com/tikv/rust-rocksdb.git", rev="bac3ef613692ba783cfe9256cfd2388411c25a6d"}

[dev-dependencies]
byteorder = "1.3.2"
proptest = "0.9.4"
tempfile = "3.1.0"
libra-temppath = { path = "../../common/temppath", version = "0.1.0" }
